--- a/sbv.html
+++ b/sbv.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -561,7 +560,7 @@
       <!-- President -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1568602471122-7832b=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="President">
+          <img src="https://images.unsplash.com/photo-15686022b=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="President">
           <div class="member-name">SHABIL M</div>
           <div class="member-position">President</div>
         </div>
@@ -570,7 +569,7 @@
       <!-- Vice President -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1507003211169b-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Vice President">
+          <img src="https://images.unsplash.com/photo-159b-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Vice President">
           <div class="member-name">ABDUL HAMEED</div>
           <div class="member-position">Vice President</div>
         </div>
@@ -579,7 +578,7 @@
       <!-- General Secretary -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="General Secretary">
+          <img src="https://images.unsplash.com/photo-7791-00dcc994a43e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="General Secretary">
           <div class="member-name">MUHAMMED SINAN P.</div>
           <div class="member-position">General Secretary</div>
         </div>
@@ -588,7 +587,7 @@
       <!-- Joint Secretary -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1544725176-7c40e5a71c5e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Joint Secretary">
+          <img src="https://images.unsplash.com/photo-140e5a71c5e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Joint Secretary">
           <div class="member-name">SAJID ALI</div>
           <div class="member-position">Joint Secretary</div>
         </div>
@@ -600,7 +599,7 @@
       <!-- Treasurer -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Treasurer">
+          <img src="https://images.unsplash.com/photo-150753-af0119f7cbe7?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Treasurer">
           <div class="member-name">SHAHID P.</div>
           <div class="member-position">Treasurer</div>
         </div>
@@ -609,7 +608,7 @@
       <!-- Arts & Cultural Secretary -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Arts Secretary">
+          <img src="https://images.unsplash.com/photo-1517472988babdf9?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Arts Secretary">
           <div class="member-name">NASREEN FATHIMA</div>
           <div class="member-position">Fine Arts Secretary</div>
         </div>
@@ -618,7 +617,7 @@
       <!-- Library Convener -->
       <div class="col-lg-3 col-md-6">
         <div class="committee-card">
-          <img src="https://images.unsplash.com/photo-1528892952291-009c663ce843?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Library Convener">
+          <img src="https://images.unsplash.com/photo2952291-009c663ce843?ixlib=rb-4.0.3&auto=format&fit=crop&w=500&q=80" class="member-img" alt="Library Convener">
           <div class="member-name">RIYAS K.</div>
           <div class="member-position">Library Convener</div>
         </div>
@@ -647,24 +646,24 @@
   <!-- Student Messages Section -->
   <section class="container pb-5">
     <h2 class="section-title">Student Voices</h2>
-    <p class="section-subtitle">What our students say about the union and college life</p>
+    <p class="section-subtitle">What our students say about the union and madrasa life</p>
 
     <div class="row g-4">
       <div class="col-lg-6">
         <div class="testimonial-box">
           <p class="quote">
-            "NISSA has been instrumental in organizing activities that balance our academic and extracurricular interests. From sports tournaments to academic seminars, they ensure every student's voice is heard and valued in our college community."
+            "SKSBV has been instrumental in organizing activities that balance our academic and extracurricular interests. From sports tournaments to academic seminars, they ensure every student's voice is heard and valued in our college community."
           </p>
-          <p class="quote-author">— Aisha <span>| BA English | Class Representative</span></p>
+          <p class="quote-author">— Asna K <span>| Class 8 | Class Representative</span></p>
         </div>
       </div>
 
       <div class="col-lg-6">
         <div class="testimonial-box">
           <p class="quote">
-            "As a member of NISSA, I've learned valuable leadership skills while serving my fellow students. The union bridges the gap between administration and students, ensuring a harmonious campus environment that promotes both academic and spiritual growth."
+            "As a member of SKSBV, I've learned valuable leadership skills while serving my fellow students. The union bridges the gap between administration and students, ensuring a harmonious campus environment that promotes both academic and spiritual growth."
           </p>
-          <p class="quote-author">— Ahmed <span>| Final Year Najawi | Union Member</span></p>
+          <p class="quote-author">— Fathima Riya <span>| Class 8 | Union Member</span></p>
         </div>
       </div>
     </div>
@@ -674,32 +673,32 @@
   <div class="container py-4">
     <div class="union-info-card text-center">
       <h3><i class="fas fa-handshake union-red-text"></i> Get Involved!</h3>
-      <p>Want to join NISSA or have suggestions? Contact us:</p>
+      <p>Have suggestions? Contact us:</p>
       <div class="row mt-4">
         <div class="col-md-4 mb-3">
           <div class="contact-box">
             <i class="fas fa-envelope fa-3x union-red-text mb-3"></i>
             <h5>Email</h5>
-            <p class="mb-0">nissanajath@gmail.com</p>
+            <p class="mb-0">noorussalam6110@gmail.com</p>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="contact-box">
             <i class="fas fa-users fa-3x union-red-text mb-3"></i>
             <h5>Meetings</h5>
-            <p class="mb-0">Every Second Saturday<br><small>2:00 PM - 4:00 PM</small></p>
+            <p class="mb-0">Every Second Saturday<br><small>7:00 AM - 8:00 AM</small></p>
           </div>
         </div>
         <div class="col-md-4 mb-3">
           <div class="contact-box">
             <i class="fas fa-calendar-check fa-3x union-red-text mb-3"></i>
             <h5>Elections</h5>
-            <p class="mb-0">Annual elections in January<br><small>Democratic voting process</small></p>
+            <p class="mb-0">Annual elections in Shawal<br><small>Democratic voting process</small></p>
           </div>
         </div>
       </div>
       <div class="mt-4">
-        <p class="mb-3">All students are welcome to participate in union activities and meetings!</p>
+        <p class="mb-3">All students are welcome to participate in unit activities and meetings!</p>
         <a href="#" class="btn btn-outline-danger">Submit Your Suggestions</a>
       </div>
     </div>
@@ -708,7 +707,7 @@
   <!-- Back to Home Button -->
   <div class="container text-center py-5">
     <a href="index.html" class="back-button">
-      <i class="fas fa-arrow-left"></i> Back to College Home
+      <i class="fas fa-arrow-left"></i> Back to Home
     </a>
   </div>
 
@@ -716,10 +715,10 @@
   <footer class="footer">
     <div class="container">
       <p>
-        © <span id="currentYear"></span> NISSA - Najath Institution for Shareea Students Association. All rights reserved.
+        © <span id="currentYear"></span> SKSBV - Noorussalam madrasa. All rights reserved.
       </p>
       <small class="text-light opacity-75">
-        Darunnajath Shareeath & Arts College, Karuvarakundu • Empowering Students Since 2007
+        Kambippalam, Kerala estate • Malappuram
       </small>
     </div>
   </footer>
