--- a/index.html
+++ b/index.html
@@ -1256,7 +1256,7 @@
   font-weight:600;
   animation: blinkMsg 1.5s infinite;
   font-family:'Poppins', sans-serif;">
-  ⚠ Important Notice: Model public exam results are published...
+  ⚠ Important Notice: Model public exam results published...
 </div>
 
 <style>
@@ -2183,5 +2183,6 @@
 
 </body>
 </html>
+
 
 
