--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@
         <div class="logo-glow"></div>
       </div>
       <div>
-        <span class="fw-bold" style="font-size: 1.1rem;">Noorussalam Madrasa</span>
+        <span class="fw-bold" style="font-size: 1.1rem;">NSM</span>
         <small class="d-block" style="font-size: 0.75rem; opacity: 0.8;">Kambippalam</small>
       </div>
     </a>
@@ -2319,3 +2319,4 @@
 
 </body>
 </html>
+
