--- a/resulthome.html
+++ b/resulthome.html
@@ -1404,7 +1404,7 @@
                     <div style="background: ${overallStatus === 'PASSED' ? 'rgba(16, 185, 129, 0.1)' : 'rgba(239, 68, 68, 0.1)'}; 
                              padding: 20px; border-radius: 12px; text-align: center; margin-top: 20px; border: 2px solid ${overallStatus === 'PASSED' ? 'var(--success)' : 'var(--danger)'};">
                         <div style="font-size: 1.1rem; font-weight: 800; color: ${overallStatus === 'PASSED' ? 'var(--success)' : 'var(--danger)'}; margin-bottom: 10px;">
-                            ${overallStatus === 'PASSED' ? '🎉 CONGRATULATIONS! 🎉' : '📝 NEEDS IMPROVEMENT'}
+                            ${overallStatus === 'PASSED' ? 'CONGRATULATIONS!' : 'NEEDS IMPROVEMENT'}
                         </div>
                         <div style="font-size: 1rem; font-weight: 700; color: #374151; margin-bottom: 12px;">
                             FINAL RESULT: <span style="color: ${overallStatus === 'PASSED' ? 'var(--success)' : 'var(--danger)'}; font-size: 1.1rem;">${overallStatus}</span>
