--- a/index.html
+++ b/index.html
@@ -1447,7 +1447,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="alumni.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-graduation-cap"></i>
                   <div>
@@ -1459,7 +1459,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="sbv.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-users"></i>
                   <div>
@@ -2319,4 +2319,5 @@
 
 </body>
 </html>
+
 
