--- a/index.html
+++ b/index.html
@@ -1994,10 +1994,10 @@
       <a href="result.html" class="btn primary">
         <i class="fas fa-chart-line"></i> Check Previous Results
       </a>
-      <a href="downloads.html" class="btn outline">
-        <i class="fas fa-download"></i> Study Materials
+      <a href="#" class="btn outline">
+        <i class="fa-slab fa-regular fa-address-card"></i> Learn More
       </a>
-      <a href="forms.html" class="btn outline">
+      <a href="download.html" class="btn outline">
         <i class="fas fa-calendar-check"></i> Exam Schedule
       </a>
     </div>
@@ -3024,5 +3024,6 @@
 
 </body>
 </html>
+
 
 
