--- a/downloads.html
+++ b/downloads.html
@@ -226,7 +226,7 @@
               <p class="card-text small text-muted mt-2 file-info">
                 <i class="bi bi-filetype-pdf"></i> PDF • 320KB • Updated: Apr 2024
               </p>
-              <a href="#" 
+              <a href="https://tt-yearly-exam-25-26-genaral-1-260108-124902.tiiny.site" 
                  class="btn btn-download" 
                  download
                  target="_blank"
@@ -238,94 +238,6 @@
           </div>
         </div>
 
-        <!-- Card 5 - Additional Example -->
-        <div class="col-md-4 col-lg-3 download-item" data-category="forms" data-name="fee structure">
-          <div class="card text-center p-3">
-            <div class="card-body">
-              <i class="bi bi-cash-coin download-icon text-primary"></i>
-              <h5 class="card-title fw-bold text-primary">Fee Structure</h5>
-              <p class="card-text">Academic year fee details for all classes.</p>
-              <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 150KB • Updated: Jan 2024
-              </p>
-              <a href="#" 
-                 class="btn btn-download" 
-                 download
-                 target="_blank"
-                 rel="noopener noreferrer"
-                 aria-label="Download Fee Structure PDF">
-                Download <span class="visually-hidden">Fee Structure</span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 6 - Additional Example -->
-        <div class="col-md-4 col-lg-3 download-item" data-category="circulars" data-name="holiday list">
-          <div class="card text-center p-3">
-            <div class="card-body">
-              <i class="bi bi-umbrella-fill download-icon text-primary"></i>
-              <h5 class="card-title fw-bold text-primary">Holiday List 2024</h5>
-              <p class="card-text">Official holiday schedule for the academic year.</p>
-              <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 210KB • Updated: Dec 2023
-              </p>
-              <a href="#" 
-                 class="btn btn-download" 
-                 download
-                 target="_blank"
-                 rel="noopener noreferrer"
-                 aria-label="Download Holiday List PDF">
-                Download <span class="visually-hidden">Holiday List</span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 7 - Additional Example -->
-        <div class="col-md-4 col-lg-3 download-item" data-category="applications" data-name="scholarship">
-          <div class="card text-center p-3">
-            <div class="card-body">
-              <i class="bi bi-award-fill download-icon text-primary"></i>
-              <h5 class="card-title fw-bold text-primary">Scholarship Form</h5>
-              <p class="card-text">Application form for student scholarships.</p>
-              <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 280KB • Updated: Feb 2024
-              </p>
-              <a href="#" 
-                 class="btn btn-download" 
-                 download
-                 target="_blank"
-                 rel="noopener noreferrer"
-                 aria-label="Download Scholarship Application PDF">
-                Download <span class="visually-hidden">Scholarship Application</span>
-              </a>
-            </div>
-          </div>
-        </div>
-
-        <!-- Card 8 - Additional Example -->
-        <div class="col-md-4 col-lg-3 download-item" data-category="syllabus" data-name="arabic curriculum">
-          <div class="card text-center p-3">
-            <div class="card-body">
-              <i class="bi bi-translate download-icon text-primary"></i>
-              <h5 class="card-title fw-bold text-primary">Arabic Curriculum</h5>
-              <p class="card-text">Detailed Arabic language syllabus for all levels.</p>
-              <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 1.8MB • Updated: Mar 2024
-              </p>
-              <a href="#" 
-                 class="btn btn-download" 
-                 download
-                 target="_blank"
-                 rel="noopener noreferrer"
-                 aria-label="Download Arabic Curriculum PDF">
-                Download <span class="visually-hidden">Arabic Curriculum</span>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!-- No Results Message -->
       <div class="row mt-5 d-none" id="noResults">
