--- a/downloads.html
+++ b/downloads.html
@@ -158,7 +158,7 @@
               <h5 class="card-title fw-bold text-primary">Admission Form</h5>
               <p class="card-text">Download the latest admission form for new students.</p>
               <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 245KB • Updated: Jan 2024
+                <i class="bi bi-filetype-pdf"></i> PDF • 245KB • Updated: Jan 2026
               </p>
               <a href="https://samastha.info/irsys/images/downloads/1707724777_585cc5b506136636b164.pdf" 
                  class="btn btn-download" 
@@ -180,7 +180,7 @@
               <h5 class="card-title fw-bold text-primary">Application For TC</h5>
               <p class="card-text">Form for transferring to another madrasa.</p>
               <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 180KB • Updated: Feb 2024
+                <i class="bi bi-filetype-pdf"></i> PDF • 180KB • Updated: Jan 2026
               </p>
               <a href="https://samastha.info/irsys/images/downloads/1707725101_cd663d192f90e9bc4446.pdf" 
                  class="btn btn-download" 
@@ -202,7 +202,7 @@
               <h5 class="card-title fw-bold text-primary">Syllabus (All Classes)</h5>
               <p class="card-text">Get the syllabus for classes 1 to 10 in PDF format.</p>
               <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 3.2MB • Updated: Mar 2024
+                <i class="bi bi-filetype-pdf"></i> PDF • 3.2MB • Updated: Jan 2026
               </p>
               <a href="https://drive.google.com/file/d/1zABRyD9jXArY8pjBgOe42ImEmYllY-0l/view?usp=sharing" 
                  class="btn btn-download" 
@@ -221,10 +221,10 @@
           <div class="card text-center p-3">
             <div class="card-body">
               <i class="bi bi-calendar-event-fill download-icon text-primary"></i>
-              <h5 class="card-title fw-bold text-primary">Exam Schedule 2024</h5>
+              <h5 class="card-title fw-bold text-primary">Exam Schedule 2026</h5>
               <p class="card-text">Annual examination schedule for all classes.</p>
               <p class="card-text small text-muted mt-2 file-info">
-                <i class="bi bi-filetype-pdf"></i> PDF • 320KB • Updated: Apr 2024
+                <i class="bi bi-filetype-pdf"></i> PDF • 320KB • Updated: Jan 2026
               </p>
               <a href="https://tt-yearly-exam-25-26-genaral-1-260108-124902.tiiny.site" 
                  class="btn btn-download" 
@@ -271,7 +271,7 @@
   <footer class="py-4 bg-primary text-white text-center">
     <div class="container">
       <strong>NOORUSSALAM MADRASA</strong><br>
-      <span class="small">© <span id="year"></span> All rights reserved.</span>
+      <span class="small">Suhail Kerala © <span id="year"></span> All rights reserved.</span>
     </div>
   </footer>
 
