--- a/index.html
+++ b/index.html
@@ -1957,7 +1957,7 @@
     </h3>
 
     <p class="hero-lead">
-      The 2025-26 Annual Examination begins on January 27, 2026. Prepare well and make the best use of remaining time!
+      The 2025-26 Annual Examination begins on January 27, 2026 !
     </p>
 
     <!-- Countdown Timer -->
@@ -2820,8 +2820,8 @@
         messageQueue: [
           "⚠ Important Notice: Model public exam results published. Check your results now!",
           "📢 Annual Examination begins January 27, 2026. Prepare well!",
-          "🎓 Admission open for 2025-26 academic year. Apply now!",
-          "📅 Parents meeting scheduled for November 16, 2025.",
+          "🎓 Admission open for 2026-27 academic year. Apply now!",
+          "📅 Samastha Public examination on January 24,25 Saturday,Sunday.",
           "🏆 Congratulations to all toppers of Half Yearly Examination!"
         ],
         currentMessageIndex: 0
@@ -3024,6 +3024,3 @@
 
 </body>
 </html>
-
-
-
