--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
           rgba(0, 0, 0, 0.2)
         ),
         /* Actual background image */
-        url('https://images.unsplash.com/photo-1577896851231-70ef18881754?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
+        url('https://i.ibb.co/bMLmpL7d/unnamed.jpg');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -2031,9 +2031,6 @@
   <div class="hero-content">
     <!-- Brand section -->
     <div class="brand">
-      <div class="brand-logo-wrapper">
-        <img src="https://i.ibb.co/GmW5YpC/LOGO-NSM-copy.png" alt="NSM Logo">
-      </div>
       <h1 class="brand-title">NOORUSSALAM MADRASA</h1>
       <p class="brand-sub">Kambippalam, Kerala Estate • Under SKIMVB Reg No: 6110</p>
     </div>
@@ -3074,3 +3071,4 @@
 
 </body>
 </html>
+
