--- a/index.html
+++ b/index.html
@@ -2077,10 +2077,10 @@
       <a href="result.html" class="hero-btn primary">
         <i class="fas fa-chart-line"></i> Check Results
       </a>
-      <a href="admissions.html" class="hero-btn outline">
+      <a href="forms.html" class="hero-btn outline">
         <i class="fas fa-user-plus"></i> Admissions
       </a>
-      <a href="download.html" class="hero-btn outline">
+      <a href="downloads.html" class="hero-btn outline">
         <i class="fas fa-calendar-check"></i> Exam Schedule
       </a>
     </div>
@@ -3071,4 +3071,5 @@
 
 </body>
 </html>
+
 
