--- a/index.html
+++ b/index.html
@@ -856,144 +856,277 @@
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     }
 
-    /* ===== COUNTDOWN TIMER STYLES ===== */
-    .countdown-container {
-      margin: 25px auto;
-      max-width: 900px;
-      transition: all 0.5s ease;
-    }
+/* ===== COUNTDOWN TIMER STYLES - MOBILE OPTIMIZED ===== */
+.countdown-container {
+  margin: 20px auto;
+  max-width: 900px;
+  transition: all 0.5s ease;
+  padding: 0 10px;
+}
 
-    .countdown-timer {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      gap: 15px;
-      margin: 30px 0;
-      flex-wrap: wrap;
-    }
+.countdown-timer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 20px 0;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding: 5px 0;
+  -webkit-overflow-scrolling: touch;
+}
 
-    .countdown-item {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-width: 100px;
-      background: rgba(255, 255, 255, 0.1);
-      backdrop-filter: blur(15px);
-      border-radius: 20px;
-      padding: 20px 15px;
-      border: 1px solid rgba(58, 141, 243, 0.3);
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-      transition: all 0.3s ease;
-      position: relative;
-      overflow: hidden;
-    }
+/* Hide scrollbar but keep functionality */
+.countdown-timer::-webkit-scrollbar {
+  display: none;
+}
+.countdown-timer {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
 
-    .countdown-item::before {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(135deg, transparent, rgba(58, 141, 243, 0.1), transparent);
-      opacity: 0;
-      transition: opacity 0.3s ease;
-    }
+.countdown-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-width: 70px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(15px);
+  border-radius: 15px;
+  padding: 12px 8px;
+  border: 1px solid rgba(58, 141, 243, 0.3);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
+  transition: all 0.3s ease;
+  position: relative;
+  overflow: hidden;
+  flex-shrink: 0;
+}
 
-    .countdown-item:hover {
-      transform: translateY(-5px);
-      border-color: rgba(58, 141, 243, 0.5);
-      box-shadow: 0 15px 40px rgba(58, 141, 243, 0.2);
-    }
+.countdown-item::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(135deg, transparent, rgba(58, 141, 243, 0.1), transparent);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
 
-    .countdown-item:hover::before {
-      opacity: 1;
-    }
+.countdown-item:hover {
+  transform: translateY(-5px);
+  border-color: rgba(58, 141, 243, 0.5);
+  box-shadow: 0 12px 30px rgba(58, 141, 243, 0.2);
+}
 
-    .countdown-number {
-      font-family: 'Montserrat', sans-serif;
-      font-size: 2.5rem;
-      font-weight: 800;
-      color: var(--light-blue);
-      text-shadow: 0 0 20px rgba(76, 201, 240, 0.5);
-      margin-bottom: 5px;
-      line-height: 1;
-    }
+.countdown-item:hover::before {
+  opacity: 1;
+}
 
-    .countdown-label {
-      font-size: 0.8rem;
-      color: rgba(255, 255, 255, 0.9);
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      font-weight: 600;
-      font-family: 'Anek Malayalam', sans-serif;
-    }
+.countdown-number {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 1.8rem;
+  font-weight: 800;
+  color: var(--light-blue);
+  text-shadow: 0 0 15px rgba(76, 201, 240, 0.5);
+  margin-bottom: 3px;
+  line-height: 1;
+  letter-spacing: -0.5px;
+}
 
-    .countdown-separator {
-      font-size: 1rem;
-      font-weight: 500;
-      color: rgba(76, 201, 240, 0.7);
-      margin-top: -10px;
-      text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+.countdown-label {
+  font-size: 0.65rem;
+  color: rgba(255, 255, 255, 0.9);
+  text-transform: uppercase;
+  letter-spacing: 0.8px;
+  font-weight: 600;
+  font-family: 'Anek Malayalam', sans-serif;
+  white-space: nowrap;
+}
 
-    /* Urgent warning for last 24 hours */
-    @keyframes pulseWarning {
-      0%, 100% { 
-        color: var(--light-blue);
-        text-shadow: 0 0 20px rgba(76, 201, 240, 0.5);
-      }
-      50% { 
-        color: #ff6b6b;
-        text-shadow: 0 0 25px rgba(255, 107, 107, 0.7);
-      }
-    }
+.countdown-separator {
+  font-size: 1.2rem;
+  font-weight: 700;
+  color: rgba(76, 201, 240, 0.7);
+  margin: 0 2px;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  flex-shrink: 0;
+  align-self: center;
+}
 
-    .countdown-timer.urgent .countdown-number {
-      animation: pulseWarning 1s infinite;
-    }
+/* Remove separators on very small screens, use spacing instead */
+@media (max-width: 380px) {
+  .countdown-separator {
+    display: none;
+  }
+  .countdown-timer {
+    gap: 4px;
+  }
+}
 
-    .countdown-timer.urgent .countdown-item {
-      border-color: rgba(255, 107, 107, 0.4);
-    }
+/* Touch-friendly adjustments */
+@media (hover: none) and (pointer: coarse) {
+  .countdown-item:hover {
+    transform: none;
+  }
+  .countdown-item:active {
+    transform: scale(0.98);
+    background: rgba(255, 255, 255, 0.15);
+  }
+}
 
-    /* Pulse animation for urgent message */
-    @keyframes pulse {
-        0%, 100% { opacity: 1; }
-        50% { opacity: 0.6; }
-    }
+/* Extra small mobile devices */
+@media (max-width: 350px) {
+  .countdown-item {
+    min-width: 65px;
+    padding: 10px 6px;
+  }
+  .countdown-number {
+    font-size: 1.6rem;
+  }
+  .countdown-label {
+    font-size: 0.6rem;
+    letter-spacing: 0.5px;
+  }
+}
 
-    .urgent-message {
-        color: #ff6b6b !important;
-        font-weight: bold !important;
-        text-align: center;
-        margin-top: 15px;
-        font-size: 18px;
-        animation: pulse 1s infinite;
-        text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-    }
+/* Tablet adjustments */
+@media (min-width: 769px) and (max-width: 992px) {
+  .countdown-item {
+    min-width: 90px;
+    padding: 15px 10px;
+  }
+  .countdown-number {
+    font-size: 2.2rem;
+  }
+  .countdown-label {
+    font-size: 0.75rem;
+  }
+}
 
-    .exam-status-message {
-        color: rgba(255,255,255,0.9);
-        margin-top: 10px;
-        font-size: 16px;
-        text-align: center;
-        text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-    }
+/* Desktop - keep original design */
+@media (min-width: 993px) {
+  .countdown-timer {
+    gap: 15px;
+  }
+  .countdown-item {
+    min-width: 100px;
+    padding: 20px 15px;
+  }
+  .countdown-number {
+    font-size: 2.5rem;
+  }
+  .countdown-label {
+    font-size: 0.8rem;
+  }
+  .countdown-separator {
+    font-size: 1.5rem;
+    margin: 0 5px;
+  }
+}
 
-    .exam-dates {
-      margin-top: 20px;
-      padding: 15px;
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 12px;
-      border-left: 3px solid var(--accent);
-      max-width: 800px;
-      margin-left: auto;
-      margin-right: auto;
-      backdrop-filter: blur(10px);
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
-    }
+/* Urgent warning for last 24 hours */
+@keyframes pulseWarning {
+  0%, 100% { 
+    color: var(--light-blue);
+    text-shadow: 0 0 20px rgba(76, 201, 240, 0.5);
+  }
+  50% { 
+    color: #ff6b6b;
+    text-shadow: 0 0 25px rgba(255, 107, 107, 0.7);
+  }
+}
 
+.countdown-timer.urgent .countdown-number {
+  animation: pulseWarning 1s infinite;
+}
+
+.countdown-timer.urgent .countdown-item {
+  border-color: rgba(255, 107, 107, 0.4);
+}
+
+/* Pulse animation for urgent message */
+@keyframes pulse {
+  0%, 100% { opacity: 1; }
+  50% { opacity: 0.6; }
+}
+
+.urgent-message {
+  color: #ff6b6b !important;
+  font-weight: bold !important;
+  text-align: center;
+  margin-top: 12px;
+  font-size: 16px;
+  animation: pulse 1s infinite;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  padding: 0 10px;
+}
+
+.exam-status-message {
+  color: rgba(255,255,255,0.9);
+  margin-top: 8px;
+  font-size: 14px;
+  text-align: center;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  padding: 0 10px;
+}
+
+.exam-dates {
+  margin-top: 15px;
+  padding: 12px 15px;
+  background: rgba(255, 255, 255, 0.1);
+  border-radius: 10px;
+  border-left: 3px solid var(--accent);
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+
+@media (max-width: 768px) {
+  .exam-dates {
+    padding: 10px 12px;
+    margin-top: 12px;
+  }
+  
+  .exam-dates p {
+    font-size: 0.9rem;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 8px;
+  }
+  
+  .exam-dates i {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .exam-dates {
+    padding: 8px 10px;
+  }
+  
+  .exam-dates p {
+    font-size: 0.85rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 5px;
+  }
+  
+  .urgent-message {
+    font-size: 14px;
+  }
+  
+  .exam-status-message {
+    font-size: 13px;
+  }
+}
     .hero-ctas {
       display: flex;
       gap: 15px;
@@ -3071,6 +3204,7 @@
 
 </body>
 </html>
+
 
 
 
