--- a/index.html
+++ b/index.html
@@ -856,12 +856,17 @@
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
     }
 
-/* ===== COUNTDOWN TIMER STYLES - MOBILE OPTIMIZED ===== */
+/* ===== COUNTDOWN TIMER STYLES - MOBILE OPTIMIZED & FULLY CENTERED ===== */
 .countdown-container {
   margin: 20px auto;
   max-width: 900px;
   transition: all 0.5s ease;
   padding: 0 10px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .countdown-timer {
@@ -874,6 +879,7 @@
   overflow-x: auto;
   padding: 5px 0;
   -webkit-overflow-scrolling: touch;
+  width: 100%;
 }
 
 /* Hide scrollbar but keep functionality */
@@ -889,6 +895,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   min-width: 70px;
   background: rgba(255, 255, 255, 0.1);
   backdrop-filter: blur(15px);
@@ -900,6 +907,7 @@
   position: relative;
   overflow: hidden;
   flex-shrink: 0;
+  text-align: center;
 }
 
 .countdown-item::before {
@@ -933,6 +941,9 @@
   margin-bottom: 3px;
   line-height: 1;
   letter-spacing: -0.5px;
+  text-align: center;
+  width: 100%;
+  display: block;
 }
 
 .countdown-label {
@@ -943,6 +954,9 @@
   font-weight: 600;
   font-family: 'Anek Malayalam', sans-serif;
   white-space: nowrap;
+  text-align: center;
+  width: 100%;
+  display: block;
 }
 
 .countdown-separator {
@@ -953,6 +967,10 @@
   text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   flex-shrink: 0;
   align-self: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 /* Remove separators on very small screens, use spacing instead */
@@ -962,6 +980,7 @@
   }
   .countdown-timer {
     gap: 4px;
+    justify-content: space-around;
   }
 }
 
@@ -1064,6 +1083,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0 10px;
+  width: 100%;
 }
 
 .exam-status-message {
@@ -1073,6 +1093,7 @@
   text-align: center;
   text-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   padding: 0 10px;
+  width: 100%;
 }
 
 .exam-dates {
@@ -1086,12 +1107,142 @@
   margin-right: auto;
   backdrop-filter: blur(10px);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+/* Center hero heading and other text */
+.hero-premium .hero-content {
+  position: relative;
+  z-index: 3;
+  text-align: center;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero-heading {
+  font-family: 'Montserrat', sans-serif;
+  font-size: clamp(1.8rem, 4vw, 2.8rem);
+  line-height: 1.2;
+  font-weight: 800;
+  color: white;
+  margin: 0 0 20px;
+  text-wrap: balance;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 100%;
+}
+
+.brand {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  margin-bottom: 30px;
+  text-align: center;
+  width: 100%;
+}
+
+.brand-title {
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 900;
+  font-size: 2.2rem;
+  letter-spacing: 1px;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 5px;
+  text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+  width: 100%;
+}
+
+.brand-sub {
+  font-size: 1rem;
+  color: rgba(255, 255, 255, 0.9);
+  font-weight: 300;
+  letter-spacing: 0.5px;
+  max-width: 600px;
+  line-height: 1.6;
+  text-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+.hero-ctas {
+  display: flex;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+  text-align: center;
+  width: 100%;
 }
 
 @media (max-width: 768px) {
+  .hero-premium {
+    min-height: 65vh;
+    padding: 80px 0 60px;
+    background-attachment: scroll;
+  }
+  
+  .brand-title {
+    font-size: 1.8rem;
+  }
+  
+  .brand-logo-wrapper {
+    width: 80px;
+    height: 80px;
+  }
+  
+  .brand-logo-wrapper img {
+    width: 50px;
+    height: 50px;
+  }
+  
+  .hero-heading {
+    font-size: clamp(1.6rem, 5vw, 2.2rem);
+  }
+  
+  .countdown-timer {
+    gap: 10px;
+    justify-content: center;
+  }
+  
+  .countdown-item {
+    min-width: 80px;
+    padding: 15px 10px;
+  }
+  
+  .countdown-number {
+    font-size: 2rem;
+  }
+  
+  .countdown-label {
+    font-size: 0.7rem;
+  }
+  
+  .countdown-separator {
+    font-size: 1.5rem;
+  }
+  
+  .hero-ctas {
+    gap: 10px;
+    justify-content: center;
+  }
+  
+  .hero-btn {
+    padding: 12px 24px;
+    font-size: 0.9rem;
+    text-align: center;
+  }
+  
   .exam-dates {
     padding: 10px 12px;
     margin-top: 12px;
+    text-align: center;
   }
   
   .exam-dates p {
@@ -1099,7 +1250,9 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
     gap: 8px;
+    text-align: center;
   }
   
   .exam-dates i {
@@ -1108,34 +1261,124 @@
 }
 
 @media (max-width: 576px) {
+  .hero-premium {
+    min-height: 60vh;
+    padding: 60px 0 40px;
+  }
+  
+  .brand-title {
+    font-size: 1.6rem;
+    text-align: center;
+  }
+  
+  .brand-sub {
+    font-size: 0.9rem;
+    text-align: center;
+  }
+  
+  .hero-heading {
+    font-size: 1.4rem;
+    text-align: center;
+  }
+  
+  .countdown-timer {
+    gap: 8px;
+    justify-content: center;
+  }
+  
+  .countdown-item {
+    min-width: 70px;
+    padding: 12px 8px;
+    text-align: center;
+  }
+  
+  .countdown-number {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+  
+  .countdown-label {
+    font-size: 0.65rem;
+    letter-spacing: 0.5px;
+    text-align: center;
+  }
+  
+  .countdown-separator {
+    font-size: 1.2rem;
+  }
+  
+  .hero-ctas {
+    flex-direction: column;
+    gap: 8px;
+    align-items: center;
+  }
+  
+  .hero-btn {
+    width: 100%;
+    max-width: 250px;
+    text-align: center;
+    justify-content: center;
+  }
+  
   .exam-dates {
     padding: 8px 10px;
+    text-align: center;
   }
   
   .exam-dates p {
     font-size: 0.85rem;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     gap: 5px;
+    text-align: center;
   }
   
   .urgent-message {
     font-size: 14px;
+    text-align: center;
   }
   
   .exam-status-message {
     font-size: 13px;
+    text-align: center;
   }
 }
-    .hero-ctas {
-      display: flex;
-      gap: 15px;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-      margin-top: 30px;
-    }
 
+/* For very small screens, ensure countdown items are centered */
+@media (max-width: 400px) {
+  .countdown-timer {
+    justify-content: center;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+  
+  .countdown-item {
+    min-width: 60px;
+    padding: 10px 5px;
+  }
+  
+  .countdown-number {
+    font-size: 1.5rem;
+  }
+  
+  .countdown-label {
+    font-size: 0.55rem;
+  }
+}
+
+/* Ensure all text in hero section is centered */
+.hero-premium {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.hero-premium .hero-content > * {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
     .hero-btn {
       display: inline-flex;
       align-items: center;
@@ -3204,6 +3447,7 @@
 
 </body>
 </html>
+
 
 
 
