--- a/index.html
+++ b/index.html
@@ -2325,7 +2325,7 @@
                 </div>
               </a>
               
-              <a class="dropdown-action-item" href="maintenance.html">
+              <a class="dropdown-action-item" href="student-zone.html">
                 <div class="action-icon">
                   <i class="fas fa-door-open"></i>
                 </div>
@@ -3447,3 +3447,4 @@
 
 </body>
 </html>
+
