--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
     .countdown-progress .progress {
       height: 10px;
       border-radius: 5px;
-      background: #e9ecef;
+      background: #021c36;
       overflow: hidden;
     }
 
@@ -3339,4 +3339,5 @@
 
 </body>
 </html>
+
 
