--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
 
     /* Exam Dates in White Box */
     .exam-dates-white {
-      background: #f8f9fa;
+      background: #011b36;
       border-radius: 12px;
       padding: 20px;
       margin-top: 25px;
@@ -3339,5 +3339,6 @@
 
 </body>
 </html>
+
 
 
