--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
     .countdown-progress .progress {
       height: 10px;
       border-radius: 5px;
-      background: #021c36;
+      background: #056102;
       overflow: hidden;
     }
 
@@ -915,7 +915,7 @@
 
     /* Exam Dates in White Box */
     .exam-dates-white {
-      background: #011b36;
+      background: #fafbfc;
       border-radius: 12px;
       padding: 20px;
       margin-top: 25px;
@@ -3339,6 +3339,7 @@
 
 </body>
 </html>
+
 
 
 
