--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
       font-weight: 900;
       font-size: 2.2rem;
       letter-spacing: 1px;
-      color: white;
+      color: #dbd693;
       text-transform: uppercase;
       margin-bottom: 5px;
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -832,7 +832,7 @@
 
     /* ===== WHITE COUNTDOWN BOX ===== */
     .white-countdown-box {
-      background: white;
+      background: #dbd693;
       border-radius: 20px;
       padding: 30px;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.25);
@@ -3339,6 +3339,7 @@
 
 </body>
 </html>
+
 
 
 
