--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
       font-weight: 900;
       font-size: 2.2rem;
       letter-spacing: 1px;
-      color: #dbd693;
+      color: #040357;
       text-transform: uppercase;
       margin-bottom: 5px;
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -769,12 +769,12 @@
       display: inline-flex;
       align-items: center;
       justify-content: center;
-      gap: 8px;
+      gap: 6px;
       padding: 14px 28px;
       border-radius: 50px;
       text-decoration: none;
-      font-weight: 600;
-      font-size: 0.95rem;
+      font-weight: 400;
+      font-size: 0.85rem;
       transition: all 0.3s ease;
       position: relative;
       overflow: hidden;
@@ -3339,6 +3339,7 @@
 
 </body>
 </html>
+
 
 
 
