--- a/index.html
+++ b/index.html
@@ -748,7 +748,7 @@
       font-weight: 900;
       font-size: 2.2rem;
       letter-spacing: 1px;
-      color: #040357;
+      color: #fc9700;
       text-transform: uppercase;
       margin-bottom: 5px;
       text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
@@ -3339,6 +3339,7 @@
 
 </body>
 </html>
+
 
 
 
