--- a/index.html
+++ b/index.html
@@ -2508,7 +2508,7 @@
         <li class="nav-item">
           <a class="nav-link nav-icon" href="https://samastha.info/" target="_blank">
             <i class="fas fa-university"></i>
-            <span>SAMASTHA</span>
+            <span>Samastha</span>
             <div class="nav-hover-effect"></div>
           </a>
         </li>
@@ -3770,5 +3770,6 @@
 
 </body>
 </html>
+
 
 
