--- a/faculties.html
+++ b/faculties.html
@@ -1172,9 +1172,9 @@
           </div>
         </li>
 
-        <!-- SAMASTHA -->
+        <!-- SAMASTHA - Now opens in same tab -->
         <li class="nav-item">
-          <a class="nav-link nav-icon" href="https://samastha.info/" target="_blank">
+          <a class="nav-link nav-icon" href="https://samastha.info/">
             <i class="fas fa-university"></i>
             <span>Samastha</span>
             <div class="nav-hover-effect"></div>
@@ -1201,7 +1201,7 @@
         
         <!-- Library -->
         <li class="nav-item">
-          <a class="nav-link nav-icon" href="#">
+          <a class="nav-link nav-icon" href="library.html">
             <i class="fas fa-book"></i>
             <span>Library</span>
             <div class="nav-hover-effect"></div>
@@ -1433,7 +1433,7 @@
 
 <!-- WhatsApp Chat Button -->
 <a href="https://wa.me/917034678818?text=Hello%20Noorussalam%20Madrasa!" 
-   class="whatsapp-float" target="_blank" 
+   class="whatsapp-float" 
    title="Chat with us on WhatsApp">
   <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/whatsapp.svg" alt="WhatsApp" />
 </a>
@@ -1499,6 +1499,14 @@
     navLinks.forEach(link => {
       if (link.getAttribute('href') === currentPage) {
         link.classList.add('active');
+      }
+    });
+    
+    // Add active class for dropdown items
+    const dropdownItems = document.querySelectorAll('.dropdown-item');
+    dropdownItems.forEach(item => {
+      if (item.getAttribute('href') === currentPage) {
+        item.classList.add('active');
       }
     });
   });
