--- a/faculties.html
+++ b/faculties.html
@@ -1015,7 +1015,7 @@
 <!-- ENHANCED NAVBAR WITH ALL REQUIRED DROPDOWNS -->
 <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
       <div class="logo-container">
         <img src="https://i.ibb.co/GmW5YpC/LOGO-NSM-copy.png" alt="NSM Logo" width="50" class="logo-img">
         <div class="logo-glow"></div>
@@ -1034,6 +1034,15 @@
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
         
+        <!-- Home Button - Added -->
+        <li class="nav-item">
+          <a class="nav-link nav-icon active" href="index.html">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+            <div class="nav-hover-effect"></div>
+          </a>
+        </li>
+
         <!-- Board Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link nav-icon dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -1043,7 +1052,7 @@
           </a>
           <ul class="dropdown-menu dropdown-menu-dark">
             <li>
-              <a class="dropdown-item active" href="faculties.html">
+              <a class="dropdown-item" href="faculties.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-chalkboard-teacher"></i>
                   <div>
@@ -1067,7 +1076,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="alumni.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-graduation-cap"></i>
                   <div>
@@ -1079,7 +1088,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="sbv.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-users"></i>
                   <div>
@@ -1221,7 +1230,6 @@
     </div>
   </div>
 </nav>
-
 <!-- HEADER -->
 <header class="faculties-header">
   <div class="container">
@@ -1514,3 +1522,4 @@
 
 </body>
 </html>
+
