--- a/alumni.html
+++ b/alumni.html
@@ -921,7 +921,7 @@
 <!-- ENHANCED NAVBAR WITH ALL REQUIRED DROPDOWNS -->
 <nav class="navbar navbar-expand-lg navbar-dark shadow-sm fixed-top">
   <div class="container">
-    <a class="navbar-brand d-flex align-items-center gap-2" href="index.html">
+    <a class="navbar-brand d-flex align-items-center gap-2" href="#">
       <div class="logo-container">
         <img src="https://i.ibb.co/GmW5YpC/LOGO-NSM-copy.png" alt="NSM Logo" width="50" class="logo-img">
         <div class="logo-glow"></div>
@@ -940,6 +940,15 @@
     <div class="collapse navbar-collapse" id="navMenu">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-center">
         
+        <!-- Home Button - Added -->
+        <li class="nav-item">
+          <a class="nav-link nav-icon active" href="index.html">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+            <div class="nav-hover-effect"></div>
+          </a>
+        </li>
+
         <!-- Board Dropdown -->
         <li class="nav-item dropdown">
           <a class="nav-link nav-icon dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -973,7 +982,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item active" href="alumni.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-graduation-cap"></i>
                   <div>
@@ -985,7 +994,7 @@
             </li>
             <li><hr class="dropdown-divider"></li>
             <li>
-              <a class="dropdown-item" href="sbv.html">
+              <a class="dropdown-item" href="maintenance.html">
                 <div class="dropdown-item-content">
                   <i class="fas fa-users"></i>
                   <div>
@@ -1078,9 +1087,9 @@
           </div>
         </li>
 
-        <!-- SAMASTHA -->
+        <!-- SAMASTHA - Now opens in same tab -->
         <li class="nav-item">
-          <a class="nav-link nav-icon" href="https://samastha.info/" target="_blank">
+          <a class="nav-link nav-icon" href="https://samastha.info/">
             <i class="fas fa-university"></i>
             <span>Samastha</span>
             <div class="nav-hover-effect"></div>
@@ -1107,7 +1116,7 @@
         
         <!-- Library -->
         <li class="nav-item">
-          <a class="nav-link nav-icon" href="#">
+          <a class="nav-link nav-icon" href="library.html">
             <i class="fas fa-book"></i>
             <span>Library</span>
             <div class="nav-hover-effect"></div>
@@ -1127,7 +1136,6 @@
     </div>
   </div>
 </nav>
-
 <!-- HEADER -->
 <header class="alumni-header">
   <div class="container">
