--- a/forms.html
+++ b/forms.html
@@ -2933,7 +2933,7 @@
                            class="form-control" 
                            name="phone" 
                            id="phone"
-                           placeholder="10-digit mobile number / 10 അക്ക മൊബൈൽ നമ്പർ" 
+                           placeholder="10-digit mobile number" 
                            required
                            pattern="[0-9]{10}"
                            maxlength="10">
